# lovelychaos-app

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LovelyChaos.docx  LovelyChaos.txt  Makefile  README.md  TESTING.md  alembic.ini  lovelychaos.db.pre_alembic_backup  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260303_0001_initial_schema.py  20260304_0002_google_calendar_tables.py  20260304_0003_reminders_table.py  20260304_0004_notification_deliveries.py  20260304_0005_digest_items.py  20260305_0006_informational_items.py  20260312_0007_followup_contexts_and_preference_behavior.py  20260317_0008_remove_batch_and_pending_schema.py  20260318_0009_sms_conversation_states.py  20260318_0010_teacher_contacts.py  20260318_0011_agent_sessions_and_thread_docs.py  20260326_0012_calendar_binding_name.py
app/: config.py  db.py  enums.py  main.py  models.py  schemas.py
app/data/: gta_public_schools_2026_02.json  school_comm_corpus_v1.json
app/services/: add_requests.py  agent_threads.py  attribution.py  auto_add.py  brief_summary.py  calendar.py  content_analysis.py  digests.py  expiry.py  followups.py  google_auth.py  llm.py  notifications.py  openai_tracing.py  operations.py  priorities.py  relevancy.py  retention.py  routing.py  school_directory.py  school_knowledge.py  validation.py
docs/: agent_tool_architecture.md
lovelychaos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: __init__.py  build_school_corpus.py  refresh_gta_school_directory.py  replay_local_pdf.py
static/: lovelychaos-design.css
templates/: admin.html  architecture_diagrams.html  architecture_diagrams_agentsdk.html  base.html  design_language.html  inbound_activity.html  onboarding.html  onboarding_gallery.html  onboarding_v1.html  onboarding_v2.html  onboarding_v3.html  onboarding_v4.html  onboarding_v5.html  onboarding_v6.html
tests/: conftest.py  fixtures.py
tests/contracts/: test_api_contracts.py
tests/cross_channel/: conftest.py  scenarios.py  (+7 more)
(+37 files in other folders)
