[project]
name = "lovelychaos"
version = "0.1.0"
description = "LovelyChaos Phase 1"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.0",
  "httpx>=0.27.0",
  "PyMuPDF>=1.26.0",
  "pdfplumber>=0.11.0",
  "pypdf>=6.0.0",
  "python-dotenv>=1.0.1",
  "timezonefinder>=8.2.0",
  "pydantic>=2.9.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "svix>=1.30.0",
  "twilio>=9.8.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
